syntax = "proto3";

option go_package = ".;proto";
package proto;

service Greeter {
    rpc SayHello(HelloRequest) returns (HelloReply) {}
    rpc SayList(HelloRequest) returns (stream HelloReply) {}
    rpc SayRecord(stream HelloRequest) returns (HelloReply) {}
    rpc SayRoute(stream HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}